# quadral-cluster

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/quadral_cluster/: config.py  database.py  main.py  schemas.py
src/quadral_cluster/api/: routes.py  routes_matching.py
src/quadral_cluster/domain/: socionics.py
src/quadral_cluster/models/: availability.py  cluster.py  domain.py  preference.py  user.py
src/quadral_cluster/services/: matching.py  matchmaking.py
src/quadral_cluster/static/: main.js  styles.css
src/quadral_cluster/templates/: index.html
src/quadral_cluster/utils/: time_overlap.py
tests/: conftest.py  test_health.py  test_match_intents.py  test_matching_paths.py  test_matching_rule.py  test_openapi.py  test_quadra_matching.py  test_users_flow.py  utils_matching.py
