[project]
name = "quadral-cluster"
version = "0.1.0"
description = "Quadral Cluster matchmaking platform services"
authors = [{ name = "Quadral Team" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "typing-extensions>=4.9",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.19"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
