[project]
name = "quadral-cluster"
version = "0.3.0"
description = "Quadral Cluster matchmaking platform services"
authors = [{ name = "Quadral Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
  "httpx>=0.27",
  "anyio>=4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
